...
            )
            if (uiState.isTeacherOrAdmin && uiState.hasLearningUnitSections) {
                PlaylistActionButton(
                    icon = Icons.Filled.Task,
                    label = stringResource(Res.string.assign),
                    onClick = onClickAssign,
                    testTag = "header_assign_btn",
                )
            }
            if (uiState.isTeacherOrAdmin) {
                PlaylistActionButton(
                    icon = Icons.Filled.Delete,
                    label = stringResource(Res.string.delete),
                    onClick = onClickDelete,
                    testTag = "delete_btn",
                )
            }
        }
    }
}

...
                            contentDescription = stringResource(Res.string.assign),
                        )
                    }
                }
                IconButton(
                    onClick = onClickToggle,
                    modifier = Modifier.testTag("expand_collapse_icon"),
                ) {
                    Icon(
                        imageVector = if (isCollapsed) {
                            Icons.Filled.ExpandMore
                        } else {
                            Icons.Filled.ExpandLess
...
